style/main.css
/* ... */
    .game-container .game-message.game-won, .game-container .game-message.game-over {
      display: block; }

.grid-container {
  position: absolute;
  z-index: 1; }

.grid-row {
  margin-bottom: 15px; }
  .grid-row:last-child {
    margin-bottom: 0; }
  .grid-row:after {
    content: "";
    display: block;
    clear: both; }

.grid-cell {
  width: 106.25px;
  height: 106.25px;
  margin-right: 15px;
  float: left;
  border-radius: 54px;
  background: rgba(238, 228, 218, 0.35); }
  .grid-cell:last-child {
    margin-right: 0; }

.tile-container {
  position: absolute;
  z-index: 2; }

.tile, .tile .tile-inner {
  width: 107px;
  height: 107px;
  line-height: 107px; }
.tile.tile-position-1-1 {
  -webkit-transform: translate(0px, 0px);
  -moz-transform: translate(0px, 0px);
  transform: translate(0px, 0px); }
.tile.tile-position-1-2 {
  -webkit-transform: translate(0px, 121px);
  -moz-transform: translate(0px, 121px);
  transform: translate(0px, 121px); }
.tile.tile-position-1-3 {
  -webkit-transform: translate(0px, 242px);
  -moz-transform: translate(0px, 242px);
  transform: translate(0px, 242px); }
.tile.tile-position-1-4 {
  -webkit-transform: translate(0px, 363px);
  -moz-transform: translate(0px, 363px);
  transform: translate(0px, 363px); }
.tile.tile-position-2-1 {
  -webkit-transform: translate(121px, 0px);
  -moz-transform: translate(121px, 0px);
  transform: translate(121px, 0px); }
.tile.tile-position-2-2 {
  -webkit-transform: translate(121px, 121px);
  -moz-transform: translate(121px, 121px);
  transform: translate(121px, 121px); }
.tile.tile-position-2-3 {
  -webkit-transform: translate(121px, 242px);
  -moz-transform: translate(121px, 242px);
  transform: translate(121px, 242px); }
.tile.tile-position-2-4 {
  -webkit-transform: translate(121px, 363px);
  -moz-transform: translate(121px, 363px);
  transform: translate(121px, 363px); }
.tile.tile-position-3-1 {
  -webkit-transform: translate(242px, 0px);
  -moz-transform: translate(242px, 0px);
  transform: translate(242px, 0px); }
.tile.tile-position-3-2 {
  -webkit-transform: translate(242px, 121px);
  -moz-transform: translate(242px, 121px);
  transform: translate(242px, 121px); }
.tile.tile-position-3-3 {
  -webkit-transform: translate(242px, 242px);
  -moz-transform: translate(242px, 242px);
  transform: translate(242px, 242px); }
.tile.tile-position-3-4 {
  -webkit-transform: translate(242px, 363px);
  -moz-transform: translate(242px, 363px);
  transform: translate(242px, 363px); }
.tile.tile-position-4-1 {
  -webkit-transform: translate(363px, 0px);
  -moz-transform: translate(363px, 0px);
  transform: translate(363px, 0px); }
.tile.tile-position-4-2 {
  -webkit-transform: translate(363px, 121px);
  -moz-transform: translate(363px, 121px);
  transform: translate(363px, 121px); }
.tile.tile-position-4-3 {
  -webkit-transform: translate(363px, 242px);
  -moz-transform: translate(363px, 242px);
  transform: translate(363px, 242px); }
.tile.tile-position-4-4 {
  -webkit-transform: translate(363px, 363px);
  -moz-transform: translate(363px, 363px);
  transform: translate(363px, 363px); }

.tile {
  position: absolute;
  -webkit-transition: 100ms ease-in-out;
  -moz-transition: 100ms ease-in-out;
  transition: 100ms ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -moz-transition-property: -moz-transform;
  transition-property: transform; }
  .tile .tile-inner {
    border-radius: 54px;
    background: #EEE4DA;
    text-align: center;
    font-weight: bold;
    z-index: 10;
    font-size: 36px; }
  .tile.tile-10 .tile-inner {
    background: #eee4da;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
  .tile.tile-20 .tile-inner {
    background: #dad2db;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
  .tile.tile-40 .tile-inner {
    background: #c7c1dd;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
  .tile.tile-80 .tile-inner {
    background: #b4b0df;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
  .tile.tile-160 .tile-inner {
    background: #a19fe1;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0.07937), inset 0 0 0 1px rgba(255, 255, 255, 0.04762); }
  .tile.tile-320 .tile-inner {
    background: #8e8ee3;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0.15873), inset 0 0 0 1px rgba(255, 255, 255, 0.09524); }
  .tile.tile-640 .tile-inner {
    color: #f9f6f2;
    background: #7a7ce5;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
    font-size: 45px; }
    @media screen and (max-width: 520px) {
      .tile.tile-640 .tile-inner {
        font-size: 25px; } }
  .tile.tile-1280 .tile-inner {
    color: #f9f6f2;
    background: #676be7;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
    font-size: 45px; }
    @media screen and (max-width: 520px) {
      .tile.tile-1280 .tile-inner {
        font-size: 25px; } }
  .tile.tile-2560 .tile-inner {
    color: #f9f6f2;
    background: #545ae9;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
    font-size: 45px; }
    @media screen and (max-width: 520px) {
      .tile.tile-2560 .tile-inner {
        font-size: 25px; } }
  .tile.tile-5120 .tile-inner {
    color: #f9f6f2;
    background: #4149eb;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
    font-size: 35px; }
    @media screen and (max-width: 520px) {
      .tile.tile-5120 .tile-inner {
        font-size: 15px; } }
  .tile.tile-10240 .tile-inner {
    color: #f9f6f2;
    background: #2e38ed;
    box-shadow: 0 0 30px 10px rgba(116, 123, 243, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
    font-size: 35px; }
/* ... */

